<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_heading"
        style="@style/mainHeading"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appHeading"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/squareButton"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:text="@string/square" />

            <LinearLayout
                android:id="@+id/squareLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/calculatearea"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:visibility="gone">

                <TextView
                    style="@style/areaHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area_heading" />

                <TextView
                    android:id="@+id/areaofSquare"
                    style="@style/areaHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <EditText
                    android:id="@+id/squareLength"
                    style="@style/valueEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/length_hint" />

                <Button
                    android:id="@+id/squareCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:background="@drawable/calcbutton"
                    android:text="@string/calculate_button" />

                <TextView
                    android:id="@+id/squareArea"
                    style="@style/areaHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

            </LinearLayout>

            <Button
                android:id="@+id/rectangleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/buttonStyle"
                android:background="@drawable/buttonstyle"
                android:text="@string/rectangle_button" />

            <LinearLayout
                android:id="@+id/rectangleLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/calculatearea"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:visibility="gone">

                <TextView
                    style="@style/areaHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area_heading" />

                <TextView
                    android:id="@+id/areaofRectangle"
                    style="@style/areaHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <EditText
                    android:id="@+id/rectangleLength"
                    style="@style/valueEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/length_hint" />

                <EditText
                    android:id="@+id/rectangleBreadth"
                    style="@style/valueEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/breadth_hint" />

                <Button
                    android:id="@+id/rectangleCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:background="@drawable/calcbutton"
                    android:text="@string/calculate_button" />

                <TextView
                    android:id="@+id/rectangleArea"
                    style="@style/areaHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>